# conda-rich

./: LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
conda_rich/: hooks.py
tests/: test_hooks.py
